--- a/index.html
+++ b/index.html
@@ -10,5 +10,19 @@
             <li>Boss直聘</li>
             <li>智联招聘</li>
         </p>
+
+        <h1>AI相关工作</h1>
+        <p>
+            <ol>机器学习工程师，machine learning engineer</ol>
+            <ol>AI数据科学家，AI data scientist</ol>
+            <ol>翻译，translator</ol>
+            <ol>AI产品经理，AI product manager</ol>
+            <ol>数据架构师，Data architect</ol>
+            <ol>提示工程师，Prompt engineer</ol>
+            <ol>软件工程师，Software engineer</ol>
+            <ol>数据工程师，Data engineer</ol>
+            <ol>设计专家，Design specialist</ol>
+            <ol>数据可视化专家，Data-visualization specialist</ol>
+        </p>
     </body>
 </html>
