--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <body>
         <h1>工作网站列表</h1>
         <p>
-            <li>猎聘</li>
-            <li>脉脉</li>
-            <li>Boss直聘</li>
-            <li>智联招聘</li>
+            <li>
+            <ol>猎聘</ol>
+            <ol>脉脉</ol>
+            <ol>Boss直聘</ol>
+            <ol>智联招聘</ol>
+            </li>
         </p>
 
         <h1>AI相关工作</h1>
         <p>
+            <li>
             <ol>机器学习工程师，machine learning engineer</ol>
             <ol>AI数据科学家，AI data scientist</ol>
             <ol>翻译，translator</ol>
@@ -23,6 +26,7 @@
             <ol>数据工程师，Data engineer</ol>
             <ol>设计专家，Design specialist</ol>
             <ol>数据可视化专家，Data-visualization specialist</ol>
+            </li>
         </p>
     </body>
 </html>
