--- a/index.html
+++ b/index.html
@@ -5,28 +5,28 @@
     <body>
         <h1>工作网站列表</h1>
         <p>
-            <li>
-            <ol>猎聘</ol>
-            <ol>脉脉</ol>
-            <ol>Boss直聘</ol>
-            <ol>智联招聘</ol>
-            </li>
+            <ol>
+            <li>猎聘</li>
+            <li>脉脉</li>
+            <li>Boss直聘</li>
+            <li>智联招聘</li>
+            </ol>
         </p>
 
         <h1>AI相关工作</h1>
         <p>
-            <li>
-            <ol>机器学习工程师，machine learning engineer</ol>
-            <ol>AI数据科学家，AI data scientist</ol>
-            <ol>翻译，translator</ol>
-            <ol>AI产品经理，AI product manager</ol>
-            <ol>数据架构师，Data architect</ol>
-            <ol>提示工程师，Prompt engineer</ol>
-            <ol>软件工程师，Software engineer</ol>
-            <ol>数据工程师，Data engineer</ol>
-            <ol>设计专家，Design specialist</ol>
-            <ol>数据可视化专家，Data-visualization specialist</ol>
-            </li>
+            <ol>
+            <li>机器学习工程师，machine learning engineer</li>
+            <li>AI数据科学家，AI data scientist</li>
+            <li>翻译，translator</li>
+            <li>AI产品经理，AI product manager</li>
+            <li>数据架构师，Data architect</li>
+            <li>提示工程师，Prompt engineer</li>
+            <li>软件工程师，Software engineer</li>
+            <li>数据工程师，Data engineer</li>
+            <li>设计专家，Design specialist</li>
+            <li>数据可视化专家，Data-visualization specialist</li>
+            </ol>
         </p>
     </body>
 </html>
