--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <body>
         <h1>工作网站列表</h1>
         <p>
-            <li>
-            <ol>猎聘</ol>
-            <ol>脉脉</ol>
-            <ol>Boss直聘</ol>
-            <ol>智联招聘</ol>
-            </li>
+            <ol>
+            <li>猎聘</li>
+            <li>脉脉</li>
+            <li>Boss直聘</li>
+            <li>智联招聘</li>
+            </ol>
         </p>
 
         <h1>AI相关工作</h1>
